# Gazebo_stewart_platform

./: CMakeLists.txt  README.md  package.xml
Launch/: stewart_platform.launch
models/stewart/: model.config
plugin/devel/: .catkin
plugin/devel/lib/pkgconfig/: stewart_platform.pc
plugin/devel/lib/stewart_platform/: ik
plugin/wandb/: latest-run
plugin/wandb/run-20240829_230412-pma0hv3m/: run-pma0hv3m.wandb
plugin/wandb/run-20240829_230412-pma0hv3m/files/: config.yaml  wandb-metadata.json
plugin/wandb/run-20240829_230516-txyfl8yk/: run-txyfl8yk.wandb
plugin/wandb/run-20240829_230516-txyfl8yk/files/: config.yaml  wandb-metadata.json
plugin/wandb/run-20240829_230646-i12eqeil/: run-i12eqeil.wandb
plugin/wandb/run-20240829_230646-i12eqeil/files/: config.yaml  wandb-metadata.json
plugin/wandb/run-20240829_230826-wj3khb7u/: run-wj3khb7u.wandb
plugin/wandb/run-20240829_230826-wj3khb7u/files/: config.yaml  wandb-metadata.json
plugin/wandb/run-20240829_230848-q1mm0up8/: run-q1mm0up8.wandb
plugin/wandb/run-20240829_230848-q1mm0up8/files/: config.yaml  wandb-metadata.json
plugin/wandb/run-20240829_231308-zldu5bzr/: run-zldu5bzr.wandb
plugin/wandb/run-20240829_231515-crtoe4sj/: run-crtoe4sj.wandb
plugin/wandb/run-20240829_231529-ak1isw4r/: run-ak1isw4r.wandb
plugin/wandb/run-20240829_231648-fghg7poa/: run-fghg7poa.wandb
plugin/wandb/run-20240829_232334-qn49qjh9/: run-qn49qjh9.wandb
src/: controller_platform.py  ik.cpp  seastate_1.csv  seastate_2.csv  seastate_3.csv  sway_D1.csv  sway_D2.csv  sway_D3.csv  test_platform.py
(+17 files in other folders)
